<resources>
    <string name="app_name">ScriptTankLoginDemo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="login_failed">LOGIN_FAILED</string>
    <string name="login_succeeded">LOGIN SUCCEEDED</string>
    <string name="user_not_found">No user was found</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_account_disabled">This account has been disabled</string>
    <string name="error_field_required">This field is required</string>
    <string name="createAccount">Create Account</string>
    <string name="pwd_prompt">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="phone_prompt">Phone Number</string>
    <string name="acct_type_prompt">Choose Account Type</string>
    <string name="error_pwd_not_equal">Passwords must match</string>
    <string name="view_extracts">View Extracts</string>
    <string name="log_out">Log Out</string>
    <string name="required_field">*Required</string>
    <string name="view_profile">View Profile</string>
    <string name="user_prof_file_name">user_prof</string>
    <string name="user_profile_intent">USER_PROFILE</string>
    <string name="upload_files">Upload Files</string>
    <string name="upload_file">Upload File</string>
    <string name="choose_file">Choose File</string>
    <string name="contact_writers">Contact Writers</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="view_files">View My Files</string>
    <string name="send_message">Send Message</string>
    <string name="home">Home</string>
    <string name="list_purchased">List Purchased Ideas</string>
    <string name="view_editor_requests">View Editor Requests</string>
    <string name="upload_idea">Upload Idea</string>
    <string name="idea_name">Idea Name</string>
    <string name="idea_abstract">Abstract</string>
    <string name="idea_description">Description</string>
    <string name="idea_genre">Genre</string>
    <string name="idea_page_length">Est. Page Length</string>
    <string name="idea_worth">Desired Idea Worth</string>
    <string name="idea_writer_alias">Alias(if desired)</string>
    <string name="publisherName">Publisher Name</string>
    <string name="search_titlebar">Search</string>
    <string name="search_keywords">Enter keywords</string>
    <string name="nothing_found">No books found</string>
    <string name="placeholder">Placeholder</string>
    <string name="search_for_idea">Search For Idea</string>
    <string name="search">Search</string>
    <string name="search_drawer">Search for Ideas</string>
    <string name="demo">SearchUI Demo</string>
    <string name="view_ideas">View Ideas</string>
    <string name="preview">Preview</string>
    <string name="author">Author</string>
    <string name="profile">Profile</string>
    <string name="buy">Buy this idea!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="purchased_ideas">Purchased Ideas</string>
    <string name="company_name">Company</string>
    <string name="company_info">Company Info</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="publisher_purchased_ideas">View Purchased Ideas</string>
    <string name="welcome">Welcome to the ScriptTank Demo!</string>
    <string name="author_bio">Author Bio</string>
    <string name="feed_item">Feed Item</string>
    <string name="feed_item_desc">Feed Item Desc</string>
    <string name="request_fragment">Request from </string>
    <string name="title_activity_editor_request_list">EditorRequestList</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_bought_ideas">ViewBoughtIdeasActivity</string>
</resources>