<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/ViewMyFiles"
            android:title="@string/view_files" />

        android:id="@+id/ViewProfile"
        android:title="@string/view_profile" />

        <item
            android:id="@+id/viewRequestsDrawer"
            android:title="View Requests" />
        android:id="@+id/UploadIdea"
        android:title="@string/upload_idea" />

        <item
            android:id="@+id/sendMessageDrawer"
            android:title="@string/send_message" />

        android:id="@+id/ViewEditorRequests"
        android:title="@string/view_editor_requests" />

        <item
        android:id="@+id/ViewMyFiles"
        android:title="@string/view_files" />
        
        <item
        android:id="@+id/settings"
        android:title="@string/title_activity_settings" />
    </group>
</menu>